C++II/.metadata/.plugins/org.eclipse.cdt.ui/(10-21) Dynamic Memory.build.log
14:09:24 **** Incremental Build of configuration Debug for project (10-21) Dynamic Memory ****
make all 
Building file: ../src/(10-21) Dynamic Memory.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/(10-21) Dynamic Memory.d" -MT"src/(10-21)\ Dynamic\ Memory.d" -o "src/(10-21) Dynamic Memory.o" "../src/(10-21) Dynamic Memory.cpp"
../src/(10-21) Dynamic Memory.cpp: In function ‘int main()’:
../src/(10-21) Dynamic Memory.cpp:56:3: error: a function-definition is not allowed here before ‘{’ token
   {
   ^
../src/(10-21) Dynamic Memory.cpp:69:3: error: a function-definition is not allowed here before ‘{’ token
   {
   ^
../src/(10-21) Dynamic Memory.cpp:83:4: error: a function-definition is not allowed here before ‘{’ token
    {
    ^
../src/(10-21) Dynamic Memory.cpp:98:3: error: a function-definition is not allowed here before ‘{’ token
   {
   ^
../src/(10-21) Dynamic Memory.cpp:113:1: error: expected ‘}’ at end of input
 }
 ^
make: *** [src/(10-21) Dynamic Memory.o] Error 1

14:09:25 Build Finished (took 372ms)

